2.0.3 - Bugfixes; contrastkleuren in widget en reactieform verbeterd.

--- a/less/20-elements.less
+++ b/less/20-elements.less
@@ -8,8 +8,8 @@
 // * @author  Paul van Buuren
 // * @license GPL-2.0+
 // * @package wp-rijkshuisstijl
-// * @version 1.2.18
-// * @desc.   Grid CSS voor IE11.
+// * @version 2.0.3
+// * @desc.   Bugfixes; contrastkleuren in widget en reactieform verbeterd.
 // * @link    https://github.com/ICTU/digitale-overheid-wordpress-theme-rijkshuisstijl
 // **
 
@@ -188,9 +188,9 @@
       margin-top: .75em;
     }
     h3 {
-      font-family: @bodyfont;
-      font-weight: 300;
-      font-weight: normal;
+//      font-family: @bodyfont;
+//      font-weight: 300;
+//      font-weight: normal;
     }
     h2 {
       margin-bottom: .5em;
@@ -232,8 +232,8 @@
       }
 
       .meta {
-        color: @a_color_visited;
-        margin: .5em 0 0 0;
+        font-family: @headerfont;
+        margin: .5em 0;
         font-size: 90%;
       }
 
