--- a/less/40-forms.less
+++ b/less/40-forms.less
@@ -8,8 +8,8 @@
 // * @author  Paul van Buuren
 // * @license GPL-2.0+
 // * @package wp-rijkshuisstijl
-// * @version 2.0.2
-// * @desc.   Searchform styling hersteld.
+// * @version 2.0.3
+// * @desc.   Bugfixes; contrastkleuren in widget en reactieform verbeterd.
 // * @link    https://github.com/ICTU/digitale-overheid-wordpress-theme-rijkshuisstijl
 //
 
@@ -19,7 +19,18 @@
 
   form {
     padding: 1em;
-    background: @grijs;
+    background: @grijs_1;
+    
+    a {
+      color: @txt;
+      
+      &:focus,
+      &:hover {
+        color: @txt;
+        
+      }
+    }
+    
   }
 
   input[type="text"],
