--- a/less/50-sidebar.less
+++ b/less/50-sidebar.less
@@ -8,8 +8,8 @@
 // * @author  Paul van Buuren
 // * @license GPL-2.0+
 // * @package wp-rijkshuisstijl
-// * @version 1.2.1
-// * @desc.   List items in home widget space.
+// * @version 2.0.3
+// * @desc.   Bugfixes; contrastkleuren in widget en reactieform verbeterd.
 // * @link    https://github.com/ICTU/digitale-overheid-wordpress-theme-rijkshuisstijl
 // **
 
@@ -100,8 +100,7 @@
             &:hover,
             &:active,
             &:focus {
-
-            color: @donkerblauw_vol;
+              color: @a_color_hover;
   
               h2, h3 {
                 color: @donkerblauw_vol;
