--- a/less/style.less
+++ b/less/style.less
@@ -4,8 +4,8 @@
   Description: Theme voor digitaleoverheid.nl
   Author: Paul van Buuren
   Author URI: https://github.com/ICTU/digitale-overheid-wordpress-theme-rijkshuisstijl/
-  Version: 2.0.2
-  Version description: 2.0.2 - Searchform styling hersteld.
+  Version: 2.0.3
+  Version description: 2.0.3 - Bugfixes; contrastkleuren in widget en reactieform verbeterd.
   Text Domain: wp-rijkshuisstijl
   
   Template: genesis
@@ -1299,7 +1299,7 @@ nav.nav-primary .menu-item.js-menu-open > ul.sub-menu {
 }
 
 .entry-content .metadata {
-  background: @grijs_2;
+  background: @grijs_1;
   padding: .5em;
   ul {
     &, li {
